...
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="runHomebrewCleanup:" target="547" id="UJD-Ns-ued"/>
                                    <binding destination="547" name="enabled" keyPath="self.isHomebrewInstalled" id="lSy-fl-XmV"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Remove Unused Dependencies…" id="cbk-autoremove-menu">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="removeUnusedDependencies:" target="547" id="cbk-autoremove-action"/>
                                    <binding destination="547" name="enabled" keyPath="self.isHomebrewInstalled" id="cbk-autoremove-enabled"/>
                                </connections>
                            </menuItem>
...
